# evergreen_scripts

./: README.md  pyproject.toml
src/: analyze_patch.py  viewless_suites.py
src/cli/: analyze_patch.py  tags.py  viewless_suites.py
src/utils/: command_args.py  tags.py
